Support guest login using jwt
