# api/src/main/kotlin/app/nextrole/api/service/user/UserService.kt
@@ -9,5 +9,6 @@ import app.nextrole.api.*
 interface UserService {
     fun getOrCreateUser(): SessionUser
     suspend fun signIn(stringValue: StringValue): GenericResponse
+    suspend fun guestSignIn(userInfo: Map<String, Any>): SessionUserResponse
     suspend fun confirmOtp(otpConfirmation: OtpConfirmation): SessionUserResponse
 }
